# gungi

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  NOTATION.md  README.md  RULES.md
demo/: CMakeLists.txt  README.md
demo/src/: app.cpp  app.hpp  commandparser.cpp  commandparser.hpp  main.cpp  term.h
gungi/: CMakeLists.txt
gungi/include/: builder.hpp  gndecoder.hpp  gtypes.hpp  logician.hpp  player.hpp  posn.hpp  tower.hpp  unit.hpp  util.hpp
gungi/lib/gungi/: gungi.cpp  gungi.hpp
gungi/src/: builder.cpp  gndecoder.cpp  gtypes.cpp  logician.cpp  player.cpp  posn.cpp  tower.cpp  unit.cpp  util.cpp
gungi/tests/: CMakeLists.txt
gungi/tests/gungi/: builder_unit_tests.cpp  gndecoder_unit_tests.cpp  gtypes_unit_tests.cpp  gungi_unit_tests.cpp  logician_unit_tests.cpp  main.cpp  player_unit_tests.cpp  posn_unit_tests.cpp  scenario_unit_tests.cpp  scenarios.res  tower_unit_tests.cpp  unit_unit_tests.cpp  util_unit_tests.cpp
gungi/tests/gungi/res/: initial_arrangement.gn  scenario_one.gn  scenario_two.gn
submodules/: CMakeLists.txt
