[Event "Selection"]
[Location "NGL, Mitene Union"]
[Date "2016.09.05"]
[White "Komugi"]
[Black "Meruem"]
[Result "*"]
1. PZ*0-6-0 PZ*0-2-0 2. PZ*1-6-0 PZ*1-2-0 3. PZ*2-6-0 PZ*2-2-0 4. PZ*3-6-0 PZ*3-2-0 5. PZ*4-6-0 PZ*4-2-0 6. PZ*5-6-0 PZ*5-2-0 7. PZ*6-6-0 PZ*6-2-0 8. PV*7-6-0 PV*7-2-0 9. PG*8-6-0 PG*8-2-0 10. O-*4-8-0 O-*4-0-0 11. CI*3-8-0 CI*3-0-0 12. CI*5-8-0 CI*5-0-0 13. FL*4-7-0 FL*4-1-0 14. BA*0-7-0 BA*0-1-0 15. BA*8-7-0 BA*8-1-0 16. YN*4-7-1 YN*4-1-1 17. YN*2-7-0 YN*2-1-0 18. YN*6-7-0 YN*6-1-0 19. TL*0-8-0 TL*0-0-0 20. RX*0-8-1 RX*0-0-1 21. HK*8-8-0 HK*8-0-0 22. SE*1-7-0 SE*1-1-0 23. SE*7-7-0 SE*7-1-0
