[Event "Turn One Black Checkmate"]
[Result "0 - 1"]
1. PZ*0-7-0 O-*0-2-0 2. HK*0-6-0 PZ*0-0-0 3. PZ*1-6-0 PZ*1-0-0 4. PZ*2-6-0 PZ*2-0-0 5. PZ*3-6-0 PZ*3-0-0 6. PZ*4-6-0 PZ*4-0-0 7. PZ*5-6-0 PZ*5-0-0 8. PZ*6-6-0 PZ*6-0-0 9. PV*7-6-0 PV*7-0-0 10. PG*8-6-0 PG*8-0-0 11. BA*2-8-0 BA*0-0-1 12. BA*0-7-1 BA*0-1-0 13. RX*2-8-1 RX*0-0-2 14. O-*3-8-0 HK*0-1-1 15. FL*0-8-0 FL*4-1-0 16. TL*1-7-0 TL*1-1-0 17. YN*0-7-2 YN*0-1-2 18. YN*0-8-1 YN*5-1-0 19. YN*1-6-1 YN*1-0-1 20. SE*8-8-0 SE*8-2-0 21. SE*8-6-1 SE*8-0-1 22. CI*1-7-1 CI*1-1-1 23. CI*1-8-0 (CI*1-2-0)
