[Event "Turn One White Checkmate"]
[Result "1 - 0"]
1. O-*0-6-0 HK*0-2-0 2. PZ*0-7-0 PZ*0-1-0 3. PZ*1-7-0 PZ*1-1-0 4. PZ*2-7-0 PZ*2-1-0 5. PZ*3-7-0 PZ*3-1-0 6. PZ*4-7-0 PZ*4-1-0 7. PZ*5-7-0 PZ*5-1-0 8. PZ*6-7-0 PZ*6-1-0 9. PV*7-7-0 PV*7-1-0 10. PG*8-7-0 PG*8-1-0 11. BA*0-7-1 BA*0-1-1 12. BA*1-7-1 BA*1-1-1 13. RX*0-7-2 RX*4-2-0 14. HK*1-7-2 FL*2-0-0 15. FL*2-8-0 TL*3-0-0 16. TL*3-8-0 CI*1-2-0 17. CI*1-6-0 CI*8-2-0 18. CI*8-8-0 SE*1-2-1 19. SE*1-6-1 SE*8-0-0 20. SE*8-6-0 YN*1-2-2 21. YN*1-6-2 YN*4-0-0 22. YN*4-8-0 YN*5-0-0 23. YN*5-8-0 O-*8-1-1
